# lua-rs

./: .gitignore  CLAUDE.md  Cargo.toml  Makefile  PHASE_D_PLAN.md  PILOT_KICKOFF.md  PORTING.md  PORT_STRATEGY.md  PUBLISH.md  README.md  appendonly.aof  dump.rdb  index.html  luac.out
.claude/agents/: translator.md
.github/workflows/: npm-publish-wasm.yml
ANALYSES/: error_sites.tsv  macros.tsv  types.tsv
crates/lua-gc/: Cargo.toml
crates/lua-gc/src/: gc.rs  heap.rs
crates/lua-hlua-shim/: Cargo.toml
crates/lua-parse/: Cargo.toml
crates/lua-rs-runtime/: Cargo.toml
crates/lua-vm/: Cargo.toml
docs/: LOOP_DIAGRAM.md  MATCHING_C_PERFORMANCE.md  NPM_WASM_PUBLISHING.md  PERFORMANCE_PRINCIPLES.md  PERF_INVESTIGATION.md  PHASE_F_ATTACK_PLAN.md  SANDBOXING_EXPLORATION.md
docs/stuck-tests/: README.md  errors.lua.md  files.lua.md  gc.lua.md
harness/: PARITY.md  check_wasm_package.sh  debug_agent_prompt.txt  fanout.sh  history.jsonl  implement_loop.sh  mega_loop.sh  respawn_loop.sh  run_official_all.sh  unsafe-budgets.toml
harness/bench/: backfill-tests.sh  compare.sh  compare_luars.sh
harness/evidence/: ledger.jsonl
harness/impl/: _strings_dbg.lua  agent-costs-O1.txt  agent-costs-O11.txt  agent-costs-O12.txt  agent-costs-O3.txt  agent-costs-O4.txt  build-O1.err  build-O11.err  build-O12.err  build-O13.err  build-O14.err  build-O2.err  build-O3.err  build-O4.err  build-O5.err  build-O6.err  build-O8.err  debug-costs-O1.txt  debug-costs-O10.txt  debug-costs-O11.txt  debug-costs-O13.txt  debug-costs-O14.txt  debug-costs-O16.txt  debug-costs-O2.txt  (+295 more)
(+262 files in other folders)
