[package]
name = "lua-gc"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true

# Per harness/unsafe-budgets.toml, this crate may use up to 20 unsafe blocks
# (incremental tri-color GC unavoidably needs some). Every block requires
# `// SAFETY: <invariant>`. See PORTING.md §11.
[lints.rust]
unsafe_code = "allow"

[dependencies]
# No dependency on lua-types: lua-gc is the lowest crate. lua-types
# depends on lua-gc so that LuaValue/LuaString/UpVal can impl Trace.
